--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "css-color-function": "^1.3.3",
+    "element-ui": "^2.15.2",
     "vue": "^2.6.10",
     "vue-router": "^3.0.7"
   },
@@ -21,6 +23,7 @@
     "@vue/cli-plugin-eslint": "^3.9.0",
     "@vue/cli-service": "^3.9.0",
     "babel-eslint": "^10.0.1",
+    "babel-loader": "7.1.5",
     "babel-plugin-component": "^1.1.1",
     "connect-multiparty": "^2.2.0",
     "eslint": "^5.16.0",
